# prospect-research-automation

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: defaults.yaml
configs/presets/: pro_services_london.yaml
data/reference/: sic_exclusions.csv  sic_map.csv
inputs/: sample_targets.csv
prospect_automation/: __init__.py  cli.py  config.py  scoring.py
prospect_automation/enrichers/: enrich_ch.py
prospect_automation/utils/: merge.py
